--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.81.0",
+    "uuid": "^11.0.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
